Fix OffscreenCanvases being leaked in Workers

This change removes the strong references to OffscreenCanvas objects
in WorkerAnimationFrameProvider, which was preventing OffscreenCancases
from being garbage collected for the lifetime of the Worker that owns
it.

BUG=863511

Change-Id: Ia70c98e7fc876906e9a25ad24be8e309d4884372
Reviewed-on: https://chromium-review.googlesource.com/1142444
Reviewed-by: Stephen White <senorblanco@chromium.org>
Commit-Queue: Justin Novosad <junov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576581}
Former-commit-id: c7c29279deb33aaf6af2b970f4c82b7d837a9780